projects/vb6parse/snapshots/tests/library/string/right/right_error_handling.snap
---
source: projects/vb6parse/tests/library/string/right.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: OnErrorStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: " "
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: ResumeKeyword
          text: Resume
        - kind: Whitespace
          text: " "
        - kind: NextKeyword
          text: Next
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Right
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: userInput
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: count
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: MemberAccessExpression
              children:
                - kind: Identifier
                  text: Err
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Number
            - kind: Whitespace
              text: " "
            - kind: InequalityOperator
              text: "<>"
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "0"
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: result
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
        - kind: Newline
          text: "\n"
